--- a/src/GUILoginLogin.form
+++ b/src/GUILoginLogin.form
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUILogin">
-  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="contentPane" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="515" height="415"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="b6182" class="javax.swing.JLabel" binding="jLabel_login">
+      <component id="b6182" class="javax.swing.JLabel" binding="labelLogin">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Login"/>
         </properties>
       </component>
-      <component id="6c50" class="javax.swing.JLabel" binding="jLabel_benutzername">
+      <component id="6c50" class="javax.swing.JLabel" binding="labelBenutzer">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Benutzername:"/>
         </properties>
       </component>
-      <component id="c36c9" class="javax.swing.JLabel" binding="JLabel_Passwort">
+      <component id="c36c9" class="javax.swing.JLabel" binding="labelPasswort">
         <constraints>
           <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Passwort:"/>
         </properties>
       </component>
-      <component id="4327" class="javax.swing.JTextField" binding="textField_benutzername">
+      <component id="4327" class="javax.swing.JTextField" binding="textFieldBenutzername">
         <constraints>
           <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
@@ -45,6 +48,7 @@
           <grid row="3" column="2" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
@@ -53,6 +57,7 @@
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="0" height="0"/>
           </grid>
+          <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Abbrechen"/>
@@ -61,6 +66,7 @@
       <component id="9bc13" class="javax.swing.JButton" binding="loginButton" default-binding="true">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Login"/>
