--- a/src/GUIPatientenSuche.form
+++ b/src/GUIPatientenSuche.form
@@ -43,6 +43,33 @@
           <text value="Abbrechen"/>
         </properties>
       </component>
+      <component id="cd6c0" class="javax.swing.JButton" binding="buttonLöschen">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Löschen"/>
+        </properties>
+      </component>
+      <component id="adc6f" class="javax.swing.JButton" binding="buttonBearbeiten">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Bearbeiten"/>
+        </properties>
+      </component>
+      <grid id="e2f09" binding="buttonPanel" layout-manager="GridBagLayout">
+        <constraints>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
